--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@gutenye/ocr",
-  "version": "1.4.8",
+  "name": "@areb0s/ocr",
+  "version": "1.0.0",
   "workspaces": [
     "packages/browser",
     "packages/browser/example",
