--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "@gutenye/ocr-common",
-  "description": "Guten OCR is a high accurate text detection (OCR) Javascript/Typescript library that runs on Node.js, Browser, React Native and C++. Based on PaddleOCR and ONNX runtime",
-  "version": "1.4.8",
+  "name": "@areb0s/ocr-common",
+  "description": "Fork of @gutenye/ocr-common with ImageBitmap support. Shared OCR library for Browser/Node based on PaddleOCR and ONNX runtime.",
+  "version": "1.0.0",
   "type": "module",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/gutenye/ocr.git",
+    "url": "https://github.com/areb0s/ocr.git",
     "directory": "packages/common"
   },
   "exports": {
