--- a/packages/browser/package.json
+++ b/packages/browser/package.json
@@ -2,7 +2,15 @@
   "name": "@areb0s/ocr-browser",
   "version": "1.0.0",
   "description": "Fork of @gutenye/ocr-browser with ImageBitmap support. High accurate OCR library for Browser based on PaddleOCR and ONNX runtime. Accepts ImageBitmap, HTMLImageElement, HTMLCanvasElement, HTMLVideoElement as input.",
-  "keywords": ["ocr", "paddleocr", "typescript", "onnxruntime", "web", "browser", "imagebitmap"],
+  "keywords": [
+    "ocr",
+    "paddleocr",
+    "typescript",
+    "onnxruntime",
+    "web",
+    "browser",
+    "imagebitmap"
+  ],
   "type": "module",
   "license": "MIT",
   "repository": {
@@ -16,13 +24,17 @@
     "react-native": "./src/index.ts",
     "default": "./build/index.js"
   },
-  "files": ["src", "build", "!**/__tests__"],
+  "files": [
+    "src",
+    "build",
+    "!**/__tests__"
+  ],
   "scripts": {
     "prepublishOnly": "cp ../../README.md . && ./ake build",
     "postpublish": "rm README.md && rm -rf build"
   },
   "dependencies": {
-    "@areb0s/ocr-common": "workspace:*",
+    "@areb0s/ocr-common": "1.0.0",
     "@gutenye/ocr-models": "^1.2.2",
     "onnxruntime-web": "^1.17.3"
   }
