--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -23,8 +23,8 @@
   },
   "files": ["src", "build", "tsconfig.json", "!**/__tests__"],
   "scripts": {
-    "prepublishOnly": "cp ../../README.md . && ./ake build",
-    "postpublish": "rm README.md && rm -rf build"
+    "build": "npx tsc --project tsconfig.build.json && npx tsc-alias --project tsconfig.build.json",
+    "prepublishOnly": "npm run build"
   },
   "dependencies": {
     "tiny-invariant": "^1.3.3",
