--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@biomejs/biome": "1.7.3",
     "@types/bun": "latest",
+    "esbuild": "^0.27.2",
     "tsc-alias": "^1.8.8",
     "typescript": "^5.0.0"
   }
